[package]
name = "test-bitcoincore-rpc"
description = "Test Bitcoin Core RPC server"
version = "0.0.1"
edition = "2021"
license = "CC0-1.0"
homepage = "https://github.com/ordinals/ord"
repository = "https://github.com/ordinals/ord"

[dependencies]
peercoin = { git = "https://github.com/backpacker69/rust-peercoin", branch = "0.30.x", features = ["serde", "rand"]}
base64 = "0.21.0"
hex = "0.4.3"
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
peercoin-rpc = { git = "https://github.com/backpacker69/rust-peercoin-rpc", branch = "master" }
reqwest = { version = "0.11.10", features = ["blocking"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }
tempfile = "3.2.0"
